force-app/main/default/objects/Edition_Setting__mdt/Edition_Setting__mdt.object-meta.xml
<CustomObject>
    <description>IOM/IE Edition Settings  [IE-27/28]</description>
    <label>IOM Edition Setting</label>
    <pluralLabel>IOM Edition Settings</pluralLabel>
</CustomObject>