force-app/main/default/objects/Edition_Setting__mdt/fields/Amber_Countries_Needs_SalesOps_Approval__c.field-meta.xml
<CustomField>
    <fullName>Amber_Countries_Needs_SalesOps_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true Amber Countries Need SalesOps Approval from Action Dashboard before Order Creation</description>
    <label>Amber Countries Needs SalesOps Approval</label>
    <type>Checkbox</type>
</CustomField>