force-app/main/default/objects/Edition_Setting__mdt/fields/ByPass_Automatic_Order_Activation__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Automatic_Order_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ByPass Automatic Order Activation as the order required Translated language data</description>
    <label>ByPass Automatic Order Activation</label>
    <type>Checkbox</type>
</CustomField>