force-app/main/default/objects/Edition_Setting__mdt/fields/Disable_Tax_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Tax_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable  External Tax Calculation from OneSource</description>
    <label>Disable Tax Calculation</label>
    <type>Checkbox</type>
</CustomField>