force-app/main/default/objects/Edition_Setting__mdt/fields/Edition_Code__c.field-meta.xml
<CustomField>
    <fullName>Edition_Code__c</fullName>
    <label>Edition Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>