force-app/main/default/objects/Edition_Setting__mdt/fields/Edition_Name__c.field-meta.xml
<CustomField>
    <fullName>Edition_Name__c</fullName>
    <description>Edition Name</description>
    <label>Edition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>