force-app/main/default/objects/Edition_Setting__mdt/fields/Legacy_CRM_Instance__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CRM_Instance__c</fullName>
    <description>Legacy CRM Instance</description>
    <label>Legacy CRM Instance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Penton</fullName>
            </value>
            <value>
                <fullName>Payment Portal</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>