force-app/main/default/objects/Edition_Setting__mdt/fields/OH_ContainsParentProduct__c.field-meta.xml
<CustomField>
    <fullName>OH_ContainsParentProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If  true Parentlineitem and ParentSumNetValue. the field values in OH JSON</description>
    <label>Contains Parent Product</label>
    <type>Checkbox</type>
</CustomField>