force-app/main/default/objects/Edition_Setting__mdt/fields/OH_DisplayBillingScheduleNodes__c.field-meta.xml
<CustomField>
    <fullName>OH_DisplayBillingScheduleNodes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked will render the Billing Schedule and Billing Percentage fields in the node for the document sync JSON to OH</description>
    <label>Display Billing Schedule Nodes</label>
    <type>Checkbox</type>
</CustomField>