force-app/main/default/objects/Edition_Setting__mdt/fields/OH_DisplayHeader_Footer__c.field-meta.xml
<CustomField>
    <fullName>OH_DisplayHeader_Footer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked will render the Invoice Header&amp;Footer fields in the node for the document sync JSON to OH</description>
    <label>Display Header &amp; Footer</label>
    <type>Checkbox</type>
</CustomField>