force-app/main/default/objects/Edition_Setting__mdt/fields/OH_Include_Emails__c.field-meta.xml
<CustomField>
    <fullName>OH_Include_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked will render the email  field in the node for the document sync JSON to OH</description>
    <label>Include Emails</label>
    <type>Checkbox</type>
</CustomField>