force-app/main/default/objects/Edition_Setting__mdt/fields/OH_LineItemdescription__c.field-meta.xml
<CustomField>
    <fullName>OH_LineItemdescription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked will render the Lineitemdescription field in the node for document line and its translation node in OH JSON</description>
    <label>Include Line Item description</label>
    <type>Checkbox</type>
</CustomField>