force-app/main/default/objects/Edition_Setting__mdt/fields/OH_SalesPersonNameSplit__c.field-meta.xml
<CustomField>
    <fullName>OH_SalesPersonNameSplit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if true SalesPersonLastName and SalesPersonFirstName added to the main node in OH JSON</description>
    <label>Sales Person Name Split</label>
    <type>Checkbox</type>
</CustomField>