force-app/main/default/objects/Edition_Setting__mdt/fields/Order_Translation_Status_override__c.field-meta.xml
<CustomField>
    <fullName>Order_Translation_Status_override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order Translation Status override to set Competed by default</description>
    <label>Order Translation Status override</label>
    <type>Checkbox</type>
</CustomField>