force-app/main/default/objects/Edition_Setting__mdt/fields/Set_Override_Billing_Date_to_OrderDate__c.field-meta.xml
<CustomField>
    <fullName>Set_Override_Billing_Date_to_OrderDate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true the FI order should be produced at the same date as the order date.-[IE-192]</description>
    <label>Set Override Billing Date to OrderDate</label>
    <type>Checkbox</type>
</CustomField>