force-app/main/default/objects/Edition_Setting__mdt/fields/Sync_Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Sync_Payment_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Payment Transaction</label>
    <type>Checkbox</type>
</CustomField>