force-app/main/default/objects/Edition_Setting__mdt/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Edition_Code__c</columns>
    <columns>Legacy_CRM_Instance__c</columns>
    <columns>Edition_Name__c</columns>
    <columns>ByPass_Automatic_Order_Activation__c</columns>
    <columns>Disable_Tax_Calculation__c</columns>
    <columns>Sync_Payment_Transaction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data</label>
    <language>en_US</language>
</ListView>